tcp-proxy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy-db
  name: proxy-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: proxy-db
  template:
    metadata:
      labels:
        app: proxy-db
    spec:
      containers:
        - image: tecnativa/tcp-proxy:v1.0.1
          imagePullPolicy: Always
          name: tcp-proxy
          resources:
            requests:
              cpu: "0.1"
              memory: 100m
            limits:
              cpu: "0.1"
              memory: 100m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - proxy-db
            topologyKey: "kubernetes.io/hostname"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
