tcp-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-db
spec:
  rules:
  - host: demo.cluster.domain.com # change me
    http:
      paths:
      - backend:
          service:
            name: proxy-db
            port:
              number: 1030
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
